--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>P5JS vector creation</title>
         <script src="p5.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
         <script src="main.js"></script>
     </head>
     <body>
